Slight spacing bug (make it less prone to wrapping)
git-svn-id: svn+ssh://svn.bestpractical.com/svn/bps-public/rt/branches/3.5-TESTING@3509 e417ac7c-1bcc-0310-8ffa-8f5827389a85

--- a/html/NoAuth/css/3.5-default/forms.css
+++ b/html/NoAuth/css/3.5-default/forms.css
@@ -131,7 +131,7 @@ form .label, form label {
 
 #quickbar #topactions form {
     display: inline;
-    margin-right: 2em;
+    margin-left: 1em;
 }
 
 #quickbar #topactions form .button {
