--- a/html/NoAuth/css/3.5-default/quickbar.css
+++ b/html/NoAuth/css/3.5-default/quickbar.css
@@ -35,5 +35,5 @@
 
 #quickbar #topactions {
     font-size: 0.9em;
-    padding: 0.5em 0 0 2em;
+    padding: 0.5em 0 0 1em;
 }
